[gd_scene load_steps=4 format=3 uid="uid://ccxl4u1mjftgb"]

[ext_resource type="Script" path="res://skriptit/pause_menu.gd" id="1_trb53"]
[ext_resource type="Texture2D" uid="uid://hivluqp51r56" path="res://grafiikka/OhjainTooltipY.png" id="3_h2m3w"]
[ext_resource type="Texture2D" uid="uid://b8cydfpi4ba6r" path="res://grafiikka/OhjainTooltipB.png" id="3_x5uac"]

[node name="pause_ruutu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trb53")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 1.0
scale = Vector2(960, 540)
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="Paneeli" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="jatkaSprite" type="Sprite2D" parent="Paneeli"]
texture_filter = 1
position = Vector2(503, 91)
texture = ExtResource("3_x5uac")

[node name="quitSprite" type="Sprite2D" parent="Paneeli"]
texture_filter = 1
position = Vector2(511, 476)
texture = ExtResource("3_h2m3w")

[node name="pauseTeksti" type="Label" parent="Paneeli"]
texture_filter = 1
layout_mode = 0
offset_left = 375.0
offset_top = 16.0
offset_right = 563.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="jatkaNappi" type="Button" parent="Paneeli"]
texture_filter = 1
layout_mode = 0
offset_left = 375.0
offset_top = 66.0
offset_right = 479.0
offset_bottom = 121.0
text = "Continue"

[node name="lopetaNappi" type="Button" parent="Paneeli"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 375.0
offset_top = 448.0
offset_right = 479.0
offset_bottom = 503.0
text = "Quit"

[node name="tallennaNappi" type="Button" parent="Paneeli"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 324.0
offset_top = 187.0
offset_right = 415.0
offset_bottom = 242.0
text = "Save"

[node name="lataaNappi" type="Button" parent="Paneeli"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 450.0
offset_top = 187.0
offset_right = 541.0
offset_bottom = 242.0
text = "Load"

[node name="asetuksetNappi" type="Button" parent="Paneeli"]
layout_mode = 0
offset_left = 375.0
offset_top = 312.0
offset_right = 479.0
offset_bottom = 367.0
text = "Options"

[connection signal="pressed" from="Paneeli/jatkaNappi" to="." method="_on_jatka_nappi_pressed"]
[connection signal="pressed" from="Paneeli/lopetaNappi" to="." method="_on_lopeta_nappi_pressed"]
[connection signal="pressed" from="Paneeli/lopetaNappi" to="." method="_on_jatka_nappi_pressed"]
[connection signal="pressed" from="Paneeli/tallennaNappi" to="." method="_on_tallenna_nappi_pressed"]
[connection signal="pressed" from="Paneeli/lataaNappi" to="." method="_on_lataa_nappi_pressed"]
[connection signal="pressed" from="Paneeli/asetuksetNappi" to="." method="_on_asetukset_nappi_pressed"]
